# oaoa

./: .gitignore  deps.py  readme.txt
app/: config.py  crud.py  models.py
app/api/: deps.py  items.py
app/api/routes/: items.py  users.py
app/core/: config.py  db.py  security.py
backend/: .env  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b6a2ee5b1b8c_create_updatepassword.py  c0ee8f8b957b_init.py  f78e3d46b2cc_initial_setup.py  fe715790989c_fix_web.py
backend/app/: crud.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  users.py
backend/app/core/: config.py  db.py  security.py
